<resources>
    <string name="app_name">File Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cleaner">Cleaner</string>
    <string name="total_removable_size">Total Removable Size</string>
    <string name="_0_mb">0 MB</string>
    <string name="junk_files">Junk Files</string>
    <string name="_2_59" >2.59</string>
    <string name="mb">MB</string>
    <string name="scan_junk_file_and_deep_clean_your_phone">Scan junk file and deep clean your phone.</string>
    <string name="clean">Clean</string>
    <string name="duplicate_files">Duplicate Files</string>
    <string name="_0">0</string>
    <string name="remove_duplicate_files_and_reuse_available_space">Remove Duplicate Files and reuse available space.</string>
    <string name="large_files">Large Files</string>
    <string name="remove_large_files_and_reuse_available_space">Remove large Files and reuse available space.</string>
    <string name="todo">TODO</string>
    <string name="apps">Apps</string>
    <string name="search_file">Search File</string>
    <string name="no_apps">No Apps</string>
    <string name="garbage_clean">Garbage Clean</string>
    <string name="clean_up_10_gb">Clean Up 10 GB</string>
    <string name="catch_file">Catch File</string>
    <string name="_820_mb">820 MB</string>
    <string name="_2_52_gb">2.52 GB</string>
    <string name="_14_05_gb_cleaned">14.05 GB Cleaned.</string>
    <string name="document">Document</string>
    <string name="no_document">No Document</string>
    <string name="_1_selected">1 Selected</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="audio_file_mp3">Audio File.mp3</string>
    <string name="_74_5mb">74.5MB</string>
    <string name="_16_08_2012">16/08/2012</string>
    <string name="_9_25_am">9.25 am</string>
    <string name="external_storage">External Storage</string>
    <string name="no_image_folder">No Image Folder</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="no_songs">No Songs</string>
    <string name="no_songs_folder">No Songs Folder</string>
    <string name="_0_selected">0 Selected</string>
</resources>