<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        tools:context="fragment.CleaningFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/splash_bg_bg"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/itc_avant_garde_std_md"
                android:text="@string/junk_files"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/itc_avant_garde_std_md"
                android:text="@string/garbage_clean"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_clean"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="42dp"
                android:background="@drawable/white_btn_bg"
                android:fontFamily="@font/itc_avant_garde_std_demi"
                android:text="@string/clean_up_10_gb"
                android:textAllCaps="false"
                android:textColor="#771DF4"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="42dp"
                android:fontFamily="@font/itc_avant_garde_std_md"
                android:text="@string/catch_file"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_start_clean"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/itc_avant_garde_std_xl_t"
                android:text="@string/_820_mb"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView34" />


            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/itc_avant_garde_std_demi"
                android:text="@string/_2_52_gb"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/textView34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/iv_gif"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/textView34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/tv_cleaned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/itc_avant_garde_std_md"
                android:text="@string/_14_05_gb_cleaned"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_gif"
                app:layout_constraintEnd_toEndOf="@+id/iv_gif"
                app:layout_constraintStart_toStartOf="@+id/iv_gif" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>