<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_audio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/itc_avant_garde_std_md"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/audio_file_mp3"
            android:textColor="#383B44"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_select"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/tv_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/itc_avant_garde_std_md_cn"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/_74_5mb"
            android:textColor="#5B6674"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_file_name" />

        <TextView
            android:id="@+id/tv_file_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/itc_avant_garde_std_md_cn"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/_16_08_2012"
            android:textColor="#5B6674"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_file_size"
            app:layout_constraintEnd_toStartOf="@+id/tv_file_time"
            app:layout_constraintStart_toEndOf="@+id/tv_file_size"
            app:layout_constraintTop_toTopOf="@+id/tv_file_size" />

        <TextView
            android:id="@+id/tv_file_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/itc_avant_garde_std_md_cn"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/_9_25_am"
            android:textAllCaps="false"
            android:textColor="#5B6674"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_file_date"
            app:layout_constraintEnd_toStartOf="@+id/iv_select"
            app:layout_constraintTop_toTopOf="@+id/tv_file_date" />

        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/no_select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>